		or (for 1.4.12/1.6.5 quota files)
		'tunefs.lustre --param="mdt.quota_type=ug2" $MDTDEV',
		'tunefs.lustre --param="ost.quota_type=ug2" $MDTDEV'
	  For more information, please refer to bugzilla 13904.
	* Output of lfs quota has been made less detailed by default,
	  old (verbose) output can be obtained by using -v option.

Severity   : enhancement
Bugzilla   : 16188
Description: Update to SLES9 kernel-2.6.5-7.312.

Severity   : enhancement
Bugzilla   : 16503
Description: Update to RHEL4 kernel-2.6.9-67.0.22.EL.

Severity   : enhancement
Bugzilla   : 16091
Description: configure's --enable-quota should check the 
           : kernel .config for CONFIG_QUOTA
Details    : configure is terminated if --enable-quota is passed but
           : no quota support is in kernel

Severity   : normal
Bugzilla   : 16317
Description: exports in /proc are broken
Details    : recreate /proc entries for clients when they reconnect.

Severity   : normal
Bugzilla   : 16080
Description: don't fail open with -ERANGE
Details    : if client connected until mds will be know about real ost count
             get LOV EA can be fail because mds not allocate enougth buffer 
             for LOV EA.

Severity   : normal
Frequency  : only for filesystems larger than 8TB
Bugzilla   : 16101
Description: ldiskfs BUG ldiskfs_mb_use_best_found()
Details    : The ldiskfs mballoc3 code was using a __u16 to store the group
	     number, but with 8TB+ filesystems there are more than 65536
	     groups, causing an oops.

Severity   : normal
Bugzilla   : 15576
Description: Resolve device initialization race
Details    : Prevent proc handler from accessing devices added to the
	     obd_devs array but yet be intialized.

Severity   : enhancement
Bugzilla   : 15308
Description: Update to SLES10 SP2 kernel-2.6.16.60-0.23.

Severity   : enhancement
Bugzilla   : 16190
Description: Update to RHEL5 kernel-2.6.18-92.1.6.el5.

Severity   : normal
Bugzilla   : 16318
Frequency  : rare, on PPC clients