@@ -98,6 +98,7 @@ struct super_operations lustre_super_operations =
         .statfs        = ll_statfs,
         .umount_begin  = ll_umount_begin,
         .remount_fs    = ll_remount_fs,
+        .show_options  = ll_show_options,
 };
 
 
